--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,9 @@ extra:
     - icon: fontawesome/brands/youtube
       link: https://youtube.com/@patashale
       name: Patashale™ on YouTube
+    - icon: fontawesome/brands/youtube
+      link: https://youtube.com/@learn-kubernetes
+      name: Learn Kubernetes on YouTube
 
 nav:
   - Know before you start: index.md
