--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
 	"name": "Learn Kubernetes",
-	"image": "mcr.microsoft.com/devcontainers/python:0-3.11",
+	"image": "squidfunk/mkdocs-material:latest",
 	"postCreateCommand": "pip install --upgrade pip && pip3 install --user -r requirements.txt && mkdocs new ."
 }
