--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,14 @@
     "tag:yaml.org,2002:python/name:materialx.emoji.to_svg",
     "tag:yaml.org,2002:python/name:materialx.emoji.twemoji",
     "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format"
+  ],
+  "cSpell.words": [
+    "containerd",
+    "fontawesome",
+    "kube-apiserver",
+    "kubelet",
+    "Patashale",
+    "pymdownx",
+    "superfences"
   ]
 }
