--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,8 @@ repo_name: patashale/learn-kubernetes
 theme:
   name: material
   language: en
-  logo: assets/kubernetes-logo.png
-  favicon: assets/kubernetes-logo.png
+  logo: assets/logo.png
+  favicon: assets/favicon.png
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
